--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
             <h2>Kontak</h2>
             <div class="contact-list" id="Contact">
               <div class="contact-item"><strong>Email:</strong>&nbsp;<a href="mailto:imanuellombok@gmail.com">imanuellombok@gmail.com</a></div>
-              <div class="contact-item"><strong>Instagram:</strong>&nbsp;<a href="https://instagram.com/imanuellombok" target="_blank" rel="noreferrer">@imanuellombok</a></div>
-              <div class="contact-item"><strong>Facebook:</strong>&nbsp;<a href="https://facebook.com/ImanuelL" target="_blank" rel="noreferrer">Imanuel L</a></div>
+              <div class="contact-item"><strong>Instagram:</strong>&nbsp;<a href="https://instagram.com/imanuellombok" target="_blank" rel="noreferrer">@imanuellombok</a></div
             </div>
           
 
